# draft-claw

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.capture  README.md  build.rs  fly-bot.sh  fly-capture.sh  fly-set-secrets.sh  fly.bot.toml  fly.capture.toml  fly.toml  run-bot.sh  run-capture.sh
resource/: card_rating.txt  discord_channels.txt  eternal-cards.formatted.json  eternal-cards.json
src/: action.rs  app.rs  app_context.rs  bot.rs  capture.rs  cli.rs  context.rs  db_access.rs  discord_bot.rs  main.rs  opt.rs
src/app/: card_loader.rs  card_matcher.rs  input.rs  ocr_engine.rs  screen.rs
src/bot/: bot_reply.rs
src/capture/: card_matcher.rs  image_uploader.rs  ocr_engine.rs  screen.rs
src/models/: card.rs  card_rating.rs  draft_data.rs  draft_game.rs  mod.rs
src/platform/: card.rs  card_matcher.rs  card_rating.rs  db_access.rs  discord_bot.rs  draft_data.rs  draft_game.rs  match_engine.rs  mod.rs  screen.rs
