[package]
name = "draft-claw"
version = "0.1.0"
edition = "2021"

[features]
default = ["capture", "bot"]
capture = ["dep:leptess", "dep:image", "dep:opencv"]
capture-interactive = ["capture", "dep:terminal-menu"]
bot = ["dep:serenity"]

[dependencies]
leptess = { version = "0.14.0", optional = true }
image = { version = "0.24.6", optional = true }
opencv = { version = "0.81.2", optional = true }
serde = { version = "1.0.160", features = ["derive"] }
serenity = { version = "0.11.5", optional = true, default_features = false, features = ["rustls_backend", "client", "gateway", "model"] }
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v1.0.0-beta.9", features = ["http", "protocol-http"]}
tokio = { version = "1.28.0", features = ["macros", "signal"] }
serde_json = "1.0.96"
dotenv = "0.15.0"
strsim = "0.10.0"
shlex = "1.1.0"
directories = "5.0.1"
nanoid = "0.4.0"
regex = "1.8.1"
indicium = "0.4.3"
lazy_static = "1.4.0"
strum = "0.24.1"
strum_macros = "0.24.1"
itertools = "0.10.5"
terminal-menu = { version = "2.0.5", optional = true }
chrono = "0.4.24"
imgurs = "0.11.1"

[dev-dependencies]
tempfile = "3.5.0"
