[package]
name = "draft-claw"
version = "0.1.0"
edition = "2021"

[features]
default = ["capture-interactive"]
capture = ["dep:leptess", "dep:image", "dep:opencv"]
capture-interactive = ["capture", "dep:terminal-menu"]
bot = ["dep:serenity"]

[dependencies]
leptess = { version = "0.14.0", optional = true }
image = { version = "0.24.7", optional = true }
opencv = { version = "0.84.4", features = ["clang-runtime"], optional = true }
serde = { version = "1.0.183", features = ["derive"] }
serenity = { version = "0.11.6", optional = true, default_features = false, features = ["rustls_backend", "client", "gateway", "model"] }
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v1.0.0-beta.9", features = ["http", "protocol-http"]}
tokio = { version = "1.30.0", features = ["macros", "signal"] }
serde_json = "1.0.104"
dotenv = "0.15.0"
strsim = "0.10.0"
shlex = "1.1.0"
directories = "5.0.1"
nanoid = "0.4.0"
regex = "1.9.3"
indicium = "0.4.3"
lazy_static = "1.4.0"
strum = "0.25.0"
strum_macros = "0.25.2"
itertools = "0.11.0"
terminal-menu = { version = "2.0.6", optional = true }
chrono = "0.4.26"
imgurs = "0.11.2"

[dev-dependencies]
tempfile = "3.7.1"
